--- a/restaurant.html
+++ b/restaurant.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CarePlate - Connecting Surplus Food with Those in Need</title>
-    <link rel="stylesheet" href="restaurant.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -164,6 +164,6 @@
         </div>
     </footer>
 
-    <script src="restaurant.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
