--- a/ngo-interface.html
+++ b/ngo-interface.html
@@ -271,13 +271,14 @@
         }
         
         .food-description {
-            font-size: 14px;
-            color: var(--text);
-            margin-bottom: 15px;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
+        font-size: 14px;
+        color: var(--text);
+        margin-bottom: 15px;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        max-height: 3em; /* Fallback for non-WebKit browsers */
         }
         
         .food-actions {
