--- a/ngo-interface.html
+++ b/ngo-interface.html
@@ -633,7 +633,7 @@
                     <!-- Food Item 1 -->
                     <div class="food-card">
                         <div class="food-img">
-                            <img src="/api/placeholder/300/180" alt="Italian Pasta">
+                            <img src="images/pasta.jpeg" alt="Italian Pasta">
                             <span class="food-type">Italian</span>
                         </div>
                         <div class="food-details">
@@ -660,7 +660,7 @@
                     <!-- Food Item 2 -->
                     <div class="food-card">
                         <div class="food-img">
-                            <img src="/api/placeholder/300/180" alt="Sandwiches">
+                            <img src="images/sandwich-4638226_1280.jpg" alt="Sandwiches">
                             <span class="food-type">Sandwiches</span>
                         </div>
                         <div class="food-details">
@@ -687,7 +687,7 @@
                     <!-- Food Item 3 -->
                     <div class="food-card">
                         <div class="food-img">
-                            <img src="/api/placeholder/300/180" alt="Indian Curry">
+                            <img src="images/butter chicken2.jpeg" alt="Indian Curry">
                             <span class="food-type">Indian</span>
                         </div>
                         <div class="food-details">
@@ -714,7 +714,7 @@
                     <!-- Food Item 4 -->
                     <div class="food-card">
                         <div class="food-img">
-                            <img src="/api/placeholder/300/180" alt="Pastries">
+                            <img src="images/pastry.jpeg" alt="Pastries">
                             <span class="food-type">Bakery</span>
                         </div>
                         <div class="food-details">
@@ -741,7 +741,7 @@
                     <!-- Food Item 5 -->
                     <div class="food-card">
                         <div class="food-img">
-                            <img src="/api/placeholder/300/180" alt="Chinese Food">
+                            <img src="images/fried rice.jpeg" alt="Chinese Food">
                             <span class="food-type">Chinese</span>
                         </div>
                         <div class="food-details">
@@ -768,7 +768,7 @@
                     <!-- Food Item 6 -->
                     <div class="food-card">
                         <div class="food-img">
-                            <img src="/api/placeholder/300/180" alt="Pizza">
+                            <img src="images/pizza.jpeg" alt="Pizza">
                             <span class="food-type">Pizza</span>
                         </div>
                         <div class="food-details">
