--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="nav-links">
             <a href="#features">Features</a>
             <a href="#how-it-works">How It Works</a>
-            <a href="#about">About Us</a>
-            <a href="#contact">Contact</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact</a>
         </div>
         <button class="btn" id="register-btn">Register</button>
     </nav>
