--- a/restaurant-interface.html
+++ b/restaurant-interface.html
@@ -15,6 +15,7 @@
             CarePlate
         </div>
         <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
             <li><a href="#" class="active">Dashboard</a></li>
             <li><a href="#">Donations</a></li>
             <li><a href="#">NGO Directory</a></li>
