--- a/about.html
+++ b/about.html
@@ -11,15 +11,14 @@
     <nav>
         <div class="container navbar">
             <a href="#" class="logo">
-                <span class="logo-icon">🍽️</span> CarePlate
+                <span class="logo-icon"></span> CarePlate
             </a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#" class="active">About Us</a></li>
+                <li><a href="#">About Us</a></li>
                 <li><a href="restaurant-interface.html">For Restaurants</a></li>
                 <li><a href="ngo-interface.html">For NGOs</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="#">Login</a></li>
             </ul>
         </div>
     </nav>
@@ -106,25 +105,25 @@
             </div>
             <div class="stories">
                 <div class="story">
-                    <div class="story-img" style="background-image: url('/api/placeholder/600/400')"></div>
+                    <div class="story-img" style="background-image: url('images/succ1.jpeg')"></div>
                     <div class="story-content">
                         <h3>From Surplus to Support: The Fresh Start Bistro Story</h3>
-                        <p class="story-meta">New York City, USA | 2,500+ meals donated</p>
+                        <p class="story-meta">Pondicherry, India | 2,500+ meals donated</p>
                         <p>Fresh Start Bistro was throwing away quality food every night until they joined CarePlate. Now, they redirect over 100 meals weekly to Hope Community Center, feeding families while reducing their waste disposal costs by 30% and boosting staff morale.</p>
-                        <p>"CarePlate transformed our waste problem into a community solution. Our team is proud to make a difference with every meal saved." - Mark Chen, Owner</p>
+                        <p>"CarePlate transformed our waste problem into a community solution. Our team is proud to make a difference with every meal saved." - Upanayas Das, Owner</p>
                     </div>
                 </div>
                 <div class="story">
-                    <div class="story-img" style="background-image: url('/api/placeholder/600/400')"></div>
+                    <div class="story-img" style="background-image: url('images/succ2.jpeg')"></div>
                     <div class="story-content">
                         <h3>Feeding the Neighborhood: Sunshine NGO's Journey</h3>
-                        <p class="story-meta">Chicago, IL | Serving 500+ people weekly</p>
+                        <p class="story-meta">Kolkata, India | Serving 500+ people weekly</p>
                         <p>Sunshine NGO struggled with inconsistent food donations until discovering CarePlate. They now receive scheduled surplus food from 15 local restaurants, allowing them to plan meals for homeless shelters consistently and expand their services to vulnerable seniors.</p>
-                        <p>"The reliability of CarePlate's system has allowed us to increase our beneficiaries by 40% this year alone." - Sophia Rodriguez, Director</p>
+                        <p>"The reliability of CarePlate's system has allowed us to increase our beneficiaries by 40% this year alone." - Smriti Khanna, Director</p>
                     </div>
                 </div>
                 <div class="story">
-                    <div class="story-img" style="background-image: url('/api/placeholder/600/400')"></div>
+                    <div class="story-img" style="background-image: url('images/succ3.jpeg')"></div>
                     <div class="story-content">
                         <h3>A City-Wide Movement: The Austin Food Rescue Initiative</h3>
                         <p class="story-meta">Austin, TX | 75,000+ lbs of food rescued</p>
