--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,8 @@
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="restaurant-interface.html">Restaurants</a></li>
-      <li><a href="ngo-interface.html">NGOs</a></li>
+      <li><a href="restaurant-interface.html">For Restaurants</a></li>
+      <li><a href="ngo-interface.html">For NGOs</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
