--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <div class="nav-links">
             <a href="#features">Features</a>
             <a href="#how-it-works">How It Works</a>
-            <a href="about.html">About Us</a>
-            <a href="contact.html">Contact</a>
+            <a href="about.html">About</a>
+            <a href="restaurant-interface.html">For Restaurants</a>
+            <a href="ngo-interface.html">For NGOs</a>
+            <a href="contact.html">Contact Us</a>
         </div>
         <button class="btn" id="register-btn">Register</button>
     </nav>
@@ -156,7 +158,7 @@
                 <h3>Contact Us</h3>
                 <p>Email: info@careplate.org</p>
                 <p>Phone: (123) 456-7890</p>
-                <p>Address: 123 Food Drive, Hunger City</p>
+                <p>Address: 123 Compassion Street, Food District, City 10001</p>
             </div>
         </div>
         <div class="copyright">
