--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                     <a href="#">Home</a>
                     <a href="#features">Features</a>
                     <a href="#how-it-works">How It Works</a>
-                    <a href="#">About Us</a>
-                    <a href="#">Contact</a>
+                    <a href="about.html">About Us</a>
+                    <a href="contact.html">Contact</a>
                 </div>
             </div>
             <div class="footer-section">
