--- a/contact.html
+++ b/contact.html
@@ -22,16 +22,14 @@
     </ul>
   </nav>
   
-  <!-- Hero Section -->
   <div class="hero">
     <h1>Contact Us</h1>
     <p>Have questions or need assistance? We're here to help! Choose the best way to connect with our CarePlate team.</p>
   </div>
   
-  <!-- Contact Cards Section -->
+  <!-- Contact Cards -->
   <div class="container">
     <div class="contact-grid">
-      <!-- Support & Helpline Card -->
       <div class="contact-card">
         <i class="fas fa-headset"></i>
         <h3>Support & Helpline</h3>
