--- a/contact.html
+++ b/contact.html
@@ -168,18 +168,33 @@
   </div>
   
   <!-- Footer -->
-  <footer class="footer">
-    <div class="logo">Care<span>Plate</span></div>
-    <div class="footer-links">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="restaurants.html">Restaurants</a>
-      <a href="ngos.html">NGOs</a>
-      <a href="privacy.html">Privacy Policy</a>
-      <a href="terms.html">Terms of Service</a>
+  <footer>
+    <div class="footer-content">
+        <div class="footer-section">
+            <h3>About CarePlate</h3>
+            <p>CarePlate is on a mission to reduce food waste and hunger by connecting restaurants with surplus food to organizations that support those in need.</p>
+        </div>
+        <div class="footer-section">
+            <h3>Quick Links</h3>
+            <div class="footer-links">
+                <a href="#">Home</a>
+                <a href="#features">Features</a>
+                <a href="#how-it-works">How It Works</a>
+                <a href="about.html">About Us</a>
+                <a href="contact.html">Contact</a>
+            </div>
+        </div>
+        <div class="footer-section">
+            <h3>Contact Us</h3>
+            <p>Email: info@careplate.org</p>
+            <p>Phone: (123) 456-7890</p>
+            <p>Address: 123 Compassion Street, Food District, City 10001</p>
+        </div>
     </div>
-    <p>&copy; 2025 CarePlate. All rights reserved.</p>
-  </footer>
+    <div class="copyright">
+        <p>&copy; 2025 CarePlate. All Rights Reserved.</p>
+    </div>
+</footer>
 
   <script src="js/contact.js"></script>
 </body>
