--- a/ngo-interface.html
+++ b/ngo-interface.html
@@ -65,10 +65,10 @@
             </div>
 
             <div class="tabs">
-                <div class="tab active" data-tab="available">Available Food 🍲</div>
-                <div class="tab" data-tab="request">Request Pickup 🚛</div>
-                <div class="tab" data-tab="track">Track Donations 🔄</div>
-                <div class="tab" data-tab="feedback">Feedback System ⭐</div>
+                <div class="tab active" data-tab="available">Available Food</div>
+                <div class="tab" data-tab="request">Request Pickup</div>
+                <div class="tab" data-tab="track">Track Donations</div>
+                <div class="tab" data-tab="feedback">Feedback System</div>
             </div>
 
             <div id="available-tab" class="tab-content active">
