--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <!-- Navbar -->
     <nav class="navbar">
         <a href="#" class="logo">
             <span>Care<span class="logo-highlight">Plate</span></span>
@@ -104,7 +103,7 @@
                         <p>I want to donate surplus food</p>
                     </div>
                     <div class="user-type-option" data-type="ngo">
-                        <h3>I'm an NGO</h3>
+                        <h3>I'm a NGO</h3>
                         <p>I want to collect food for the needy</p>
                     </div>
                 </div>
