--- a/about.html
+++ b/about.html
@@ -15,10 +15,10 @@
             </a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="#">About</a></li>
                 <li><a href="restaurant-interface.html">For Restaurants</a></li>
                 <li><a href="ngo-interface.html">For NGOs</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </nav>
