--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
       <li><a href="about.html">About</a></li>
       <li><a href="restaurant-interface.html">For Restaurants</a></li>
       <li><a href="ngo-interface.html">For NGOs</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
     </ul>
   </nav>
   
