--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CarePlate - Connecting Surplus Food with Those in Need</title>
+    <link rel="icon" href="images/logo.png" type="image">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
